--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "nx-pkg",
   "version": "0.0.0",
   "license": "MIT",
+  "bin": {
+    "nxpkg": "dist/apps/api/main.js"
+  },
   "scripts": {
+    "assemble": "npm run affected:build -- --all",
+    "postassemble": "pkg .",
     "ng": "ng",
     "nx": "nx",
     "start": "ng serve",
@@ -29,7 +34,6 @@
   },
   "private": true,
   "dependencies": {
-    "@nrwl/angular": "8.4.3",
     "@angular/animations": "^8.0.0",
     "@angular/common": "^8.0.0",
     "@angular/compiler": "^8.0.0",
@@ -38,37 +42,49 @@
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.4.0",
-    "zone.js": "^0.9.1",
     "@nestjs/common": "^6.2.4",
     "@nestjs/core": "^6.2.4",
     "@nestjs/platform-express": "^6.2.4",
-    "reflect-metadata": "^0.1.12"
+    "@nestjs/platform-fastify": "^6.5.3",
+    "@nrwl/angular": "8.4.3",
+    "core-js": "^2.5.4",
+    "fastify-static": "^2.5.0",
+    "reflect-metadata": "^0.1.12",
+    "rxjs": "~6.4.0",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.800.1",
     "@angular/cli": "8.1.1",
-    "@nrwl/workspace": "8.4.3",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.4.5",
-    "prettier": "1.16.4",
-    "@nrwl/nest": "8.4.3",
     "@angular/compiler-cli": "^8.0.0",
     "@angular/language-service": "^8.0.0",
-    "@angular-devkit/build-angular": "^0.800.1",
-    "codelyzer": "~5.0.1",
-    "jest-preset-angular": "7.0.0",
-    "@nrwl/jest": "8.4.3",
-    "jest": "24.1.0",
-    "@types/jest": "24.0.9",
-    "ts-jest": "24.0.0",
-    "cypress": "3.4.0",
-    "@nrwl/cypress": "8.4.3",
-    "@nrwl/node": "8.4.3",
     "@nestjs/schematics": "^6.3.0",
-    "@nestjs/testing": "^6.2.4"
+    "@nestjs/testing": "^6.2.4",
+    "@nrwl/cypress": "8.4.3",
+    "@nrwl/jest": "8.4.3",
+    "@nrwl/nest": "8.4.3",
+    "@nrwl/node": "8.4.3",
+    "@nrwl/workspace": "8.4.3",
+    "@types/jest": "24.0.9",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~5.0.1",
+    "cypress": "^3.4.1",
+    "dotenv": "6.2.0",
+    "jest": "24.1.0",
+    "jest-preset-angular": "^7.1.1",
+    "pkg": "^4.3.7",
+    "prettier": "1.16.4",
+    "ts-jest": "24.0.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.4.5"
+  },
+  "pkg": {
+    "assets": [
+      "dist/apps/nxpkg/**/*"
+    ],
+    "targets": [
+      "win"
+    ]
   }
 }
